@@ -1,4 +1,4 @@
-export(plm, pvcm, pgmm, pggls, pht, pcce, pmg, plmtest, phtest, pFtest, 
+export(plm, pvcm, pgmm, pggls, pht, pcce, pmg, plmtest, phtest, pFtest, detect_lin_dep,
        pvar, pdim, pooltest, dynformula, sargan, mtest, ercomp, pvcovHC,
        pbsytest, pdwtest, pbgtest, pbltest, pwartest, pwtest, pwfdtest, pcdtest,
        plm.data, pdata.frame, between, Between, Within, lag, lead, pFormula, pmodel.response,
@@ -193,4 +193,6 @@ S3method("pcdtest", "pseries")
 S3method("print", "purtest")
 S3method("summary", "purtest")
 S3method("print", "summary.purtest")
-
+# detect_lin_dep
+S3method("detect_lin_dep", "matrix")
+S3method("detect_lin_dep", "data.frame")
