@@ -1,0 +1,39 @@
+# This is a little helper function to detect linear dependent columns
+
+detect_lin_dep.matrix <- function(object, suppressPrint = FALSE, ...) {
+  if (!inherits(object, "matrix")) {
+    stop("Input 'object' must be a matrix. Presumably, one wants a model matrix
+         generated by some 'model.matrix' function.")}
+  
+  # do rank reduction to detect lin. dep. columns
+  rank_rec <- sapply(1:ncol(object), function(col) qr(object[ , -col])$rank)
+  
+  if (diff(range(rank_rec)) == 0) {
+    num <- NULL # return NULL if there is no linear dep.
+  } else {
+    num <- which(rank_rec == max(rank_rec))
+    names(num) <- colnames(object)[num]
+  }
+  
+  if(!suppressPrint) {
+    if (is.null(num)) {
+      print("No linear dependent column(s) detected.")
+    } else {
+      print(paste0("Suspiscious column number(s): ", paste(num,        collapse = ", ")))
+      print(paste0("Suspiscious column name(s):   ", paste(names(num), collapse = ", ")))
+    }
+    return(invisible(num))
+  }
+  return(num)
+}
+
+detect_lin_dep.data.frame <- function(object, suppressPrint = FALSE, ...) {
+  if (!inherits(object, "data.frame")) {
+    stop("Input 'object' must be a data.frame")}
+
+  return(detect_lin_dep.matrix(as.matrix(object), ...))
+}
+
+detect_lin_dep <- function(object, ...) {
+  UseMethod("detect_lin_dep")
+}
