@@ -572,7 +572,12 @@ Changes since version 1.5-15
 	* model.matrix.pFormula and plm.fit: include 'assign' and 'contrasts' attributes (if any) in model fit
 	* Vignette: summary(lme_mod)$coef$fixed -> summary(lme_mod)$coefficients$fixed to avoid
 	  partial matching of 'coef' to 'coefficients' by "$" operator.
-	* r.squared: adjusted R squared fixed (at least for models with intercept)
+	* r.squared: adjusted R squared fixed (at least for models with intercept).
 	* model.matrix.pFormula and pmodel.response: ensured that 'data' gets reduced to the corresponding
 	  model frame if not already a model frame (now mimics stats::model.matrix in this regard);
-	  fixes corner cases with specific NA patterns [see tests/test_model.matrix_pmodel.response_NA.R]
+	  fixes corner cases with specific NA patterns when model.matrix.pFormula or pmodel.response are
+	  called directly and 'data' not being a model frame (despite being required so)
+	  [see tests/test_model.matrix_pmodel.response_NA.R].
+	* detect_lin_dep: new function as a little helper function to detect linear depedent
+	  columns, esp. in a model matrices; incl. doc with two examples about how linear+
+	  depedent columns can be induced by the within transformation.
